Diall hr-link jwt library added.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.4",
-        "swiftmailer/swiftmailer": "^6.0"
+        "swiftmailer/swiftmailer": "^6.0",
+        "firebase/php-jwt": "^6.3"
     }
 }
